--- a/app_admin/angular.json
+++ b/app_admin/angular.json
@@ -74,11 +74,9 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico", "src/assets"
             ],
+            
             "styles": [
               "src/assets/css/styles.css"
             ]
